# dummy-loom

./: .gitignore  CELERY_CALLBACKS_BUG_REPORT.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.benchmark.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260302_0001_initial_store_schema.py
benchmarks/apps/: fastapi_native_app.py  loom_app.py  loom_components.py  loom_manifest.py
benchmarks/docs/: architecture.md  results.md
benchmarks/raw/: benchmark_external_1772730902.json  benchmark_external_1772734509.json  benchmark_external_1772737014.json  benchmark_external_1772737425.json  benchmark_external_1772737478.json  benchmark_external_1772738123.json  benchmark_external_1772739043.json  benchmark_external_1772739535.json  benchmark_external_1772754983.json  benchmark_external_1772784279.json  benchmark_external_1772784419.json  benchmark_external_1772785247.json  benchmark_external_1772798619.json  benchmark_external_1772799012.json  benchmark_external_1772800004.json  benchmark_external_1772800969.json  benchmark_external_1772802750.json  benchmark_external_1772816164.json  benchmark_external_1772961060.json  benchmark_external_1772961996.json  (+11 more)
bruno_collection/: README.md  bruno.json
config/: api-celery.yaml  api.yaml  base.yaml  cache.yaml  celery.yaml  worker.yaml
docs/: benchmark_report_1772730902.md  benchmark_report_1772737014.md  benchmark_report_1772739535.md  benchmark_report_1773045769.md  benchmark_report_latest.md
scripts/: gen_coverage_badge.py
src/: config.yml
tests/: test_main.py
(+93 files in other folders)
