[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dummy-loom"
version = "0.1.0"
description = "Dummy Loom store API demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiocache>=0.12.3,<1.0.0",
  "alembic>=1.16.0,<2.0.0",
  "aiosqlite>=0.21.0,<1.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "celery>=5.4.0,<6.0.0",
  "redis>=5.0.0,<6.0.0",
  "flower>=2.0.1,<3.0.0",
  "greenlet>=3.2.0,<4.0.0",
  "loom-kernel[rest,celery]==0.2.0.dev30",
  "prometheus-client>=0.22.1,<1.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "sqlalchemy>=2.0.40,<3.0.0",
  "watchfiles>=0.24.0,<1.0.0",
]

[dependency-groups]
dev = [
  "httptools>=0.7.1",
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=6.0.0,<7.0.0",
  "uvloop>=0.22.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
loom-kernel = { index = "testpypi" }
